--- a/QuantitativeTrading/QuantitativeTrading.csproj
+++ b/QuantitativeTrading/QuantitativeTrading.csproj
@@ -6,8 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Component\" />
-    <Folder Include="Models\" />
+    <Folder Include="Component\DataProvider\" />
     <Folder Include="Modules\" />
   </ItemGroup>
 
