--- a/QuantitativeTrading/QuantitativeTrading.csproj
+++ b/QuantitativeTrading/QuantitativeTrading.csproj
@@ -10,7 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Magicodes.IE.Csv" Version="2.5.3.8" />
+    <PackageReference Include="Magicodes.IE.Csv" Version="2.5.3.9" />
+    <PackageReference Include="morelinq" Version="3.3.2" />
   </ItemGroup>
 
 </Project>
