--- a/QuantitativeTrading/QuantitativeTrading.csproj
+++ b/QuantitativeTrading/QuantitativeTrading.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Binance.Net" Version="6.13.5" />
     <PackageReference Include="Magicodes.IE.Csv" Version="2.5.4.9" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="morelinq" Version="3.3.2" />
   </ItemGroup>
   
