--- a/MultilateralArbitrage/MultilateralArbitrage.csproj
+++ b/MultilateralArbitrage/MultilateralArbitrage.csproj
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Binance.Net" Version="7.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
