Test CollisionAndLastStepPadding and comment

--- a/azure_templates/build.yml
+++ b/azure_templates/build.yml
@@ -1,4 +1,18 @@
 steps:
+- task: UseDotNet@2
+  displayName: 'Use .NET 5 sdk'
+  inputs:
+    packageType: sdk
+    version: 5.x
+    installationPath: $(Agent.ToolsDirectory)/dotnet
+
+- task: UseDotNet@2
+  displayName: 'Use .NET 6 sdk'
+  inputs:
+    packageType: sdk
+    version: 6.x
+    installationPath: $(Agent.ToolsDirectory)/dotnet
+
 - task: DotNetCoreCLI@2
   displayName: Restore
   inputs:
