--- a/MultilateralArbitrage/MultilateralArbitrage.csproj
+++ b/MultilateralArbitrage/MultilateralArbitrage.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Binance.Net" Version="7.2.6" />
+    <PackageReference Include="Binance.Net" Version="7.2.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
+    <PackageReference Include="Mindbox.EasyCaching.InMemory" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
